<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/linear_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"

    android:paddingTop="30dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add Record"
            android:textColor="#2E8EBB"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Fill the information and keep track your health condition"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Recording Date"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/recordingDate"
        tools:ignore="MissingPrefix" />

    <TextView

        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Recording time"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/recordingTime"
        tools:ignore="MissingPrefix" />
        <TextView
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Systolic Pressure"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:inputType="number"
            android:id="@+id/sysPressure"
            tools:ignore="MissingPrefix" />

    <TextView
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Diastolic Pressure"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:inputType="number"
        android:id="@+id/diaPressure"
        tools:ignore="MissingPrefix" />

    <TextView
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Heart Rate"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:inputType="number"
        android:id="@+id/heartRate"
        tools:ignore="MissingPrefix" />

    <TextView
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Comment"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:maxLength="20"
        android:id="@+id/overAllComment"
        tools:ignore="MissingPrefix" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addRecord"
        android:text="Add"
        android:backgroundTint="#2E8EBB"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="25dp" />

</LinearLayout>
</ScrollView>