...
            android:orientation="vertical">

            <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
       android:text="Previous Record History"
       android:fontFamily="monospace"
       android:textColor="#2E8EBB"
       android:textSize="22dp"
       tools:ignore="MissingPrefix" />

        </LinearLayout>
...

        </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addNewHealthRecord"
        android:textColor="@color/white"
        android:text="ADD RECORD"
        android:fontFamily="monospace"
        android:backgroundTint="#2E8EBB"
        />

...
